--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <title>A.M.S Negócios e Intermediação - Consultoria Financeira de Alto Desempenho</title>
     <meta name="description" content="Soluções financeiras personalizadas para equilibrar o fluxo de caixa e impulsionar o crescimento da sua empresa." />
     <meta name="author" content="A.M.S Negócios e Intermediação" />
+    <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="A.M.S Negócios e Intermediação" />
-    <meta property="og:description" content="Consultoria Financeira de Alto Desempenho" />
+
+    <meta property="og:title" content="A.M.S Negócios e Intermediação | Consultoria Financeira para Empresas" />
+    <meta property="og:description" content="Soluções personalizadas em capital de giro, reestruturação financeira e suporte estratégico para empresas de médio e grande porte." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:url" content="https://www.amsnegocios.com.br" />
+    <meta property="og:image" content="https://www.amsnegocios.com.br/imagens/capa-og.jpg" />
+    
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@amsnegociosfi" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:title" content="A.M.S Negócios e Intermediação" />
+    <meta name="twitter:description" content="Consultoria financeira especializada para empresas que buscam performance e estabilidade." />
+    <meta name="twitter:image" content="https://www.amsnegocios.com.br/imagens/capa-twitter.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
